# ssg

./: .gitignore  Cargo.toml  LICENSE  plan.md  readme.md
src/: actions.rs  checks.rs  infos.rs  main.rs
src/actions/: build.rs  clean.rs  init.rs
src/checks/: checks.rs
src/clean/: clean.rs
src/infos/: infos.rs
src/init/: init.rs
