[package]
name = "ssg"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
comrak = "0.21.0"
gray_matter = "0.2.6"
handlebars = "5.1.0"
image = "0.24.9"
serde = "1.0.197"
sha2 = "0.10.8"
urlencoding = "2.1.3"
